--- a/Verzeichnisse/Literaturverzeichnis.bib
+++ b/Verzeichnisse/Literaturverzeichnis.bib
@@ -146,5 +146,35 @@ abstract = {This article described three heuristics that are employed in making 
 
 @article{Fernandes2018, author = {Fernandes, Michael and Walls, Logan and Munson, Sean and Hullman, Jessica and Kay, Matthew}, title = {Uncertainty Displays Using Quantile Dotplots or CDFs Improve Transit Decision-Making}, year = {2018}, isbn = {9781450356206}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, url = {https://doi.org/10.1145/3173574.3173718}, doi = {10.1145/3173574.3173718}, abstract = {Everyday predictive systems typically present point predictions, making it hard for people to account for uncertainty when making decisions. Evaluations of uncertainty displays for transit prediction have assessed people's ability to extract probabilities, but not the quality of their decisions. In a controlled, incentivized experiment, we had subjects decide when to catch a bus using displays with textual uncertainty, uncertainty visualizations, or no-uncertainty (control). Frequency-based visualizations previously shown to allow people to better extract probabilities (quantile dotplots) yielded better decisions. Decisions with quantile dotplots with 50 outcomes were(1) better on average, having expected payoffs 97\% of optimal(95\% CI: [95\%,98\%]), 5 percentage points more than control (95\% CI: [2,8]); and (2) more consistent, having within-subject standard deviation of 3 percentage points (95\% CI:[2,4]), 4 percentage points less than control (95\% CI: [2,6]).Cumulative distribution function plots performed nearly as well, and both outperformed textual uncertainty, which was sensitive to the probability interval communicated. We discuss implications for real time transit predictions and possible generalization to other domains.}, booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems}, pages = {1–12}, numpages = {12}, keywords = {cumulative distribution plots, dotplots, mobileinterfaces, transit predictions, uncertainty visualization}, location = {, Montreal QC, Canada, }, series = {CHI '18} }
 
+@article{Walter2014,
+    author = {J.-C. Walter and G. T. Barkema},
+    title = {An introduction to Monte Carlo methods},
+    journal = {Physica A},
+    year = {2014},
+    eprint = {arXiv:1404.0209v1 [cond-mat.stat-mech]},
+    url = {https://arxiv.org/abs/1404.0209}
+}
+
+@article{Platon2014,
+    author = {Victor Platon and Andreea Constantinescu},
+    title = {Monte Carlo Method in Risk Analysis for Investment Projects},
+    journal = {Procedia Economics and Finance},
+    volume = {15},
+    pages = {393-400},
+    year = {2014},
+    doi = {10.1016/S2212-5671(14)00463-8}
+}
+
+@ARTICLE{Kale2021,
+  author={Kale, Alex and Kay, Matthew and Hullman, Jessica},
+  journal={IEEE Transactions on Visualization and Computer Graphics}, 
+  title={Visual Reasoning Strategies for Effect Size Judgments and Decisions}, 
+  year={2021},
+  volume={27},
+  number={2},
+  pages={272-282},
+  keywords={Uncertainty;Visualization;Data visualization;Task analysis;Decision making;Estimation;Uncertainty visualization;graphical perception;data cognition},
+  doi={10.1109/TVCG.2020.3030335}}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
