--- a/Sektionen/Einfuehrung.tex
+++ b/Sektionen/Einfuehrung.tex
@@ -1,6 +1,6 @@
 \section{Einführung}
 
-Fundamental in den Wirtschaftswissenschaften ist die von Frank H.Knight eingeführte Unterscheidung zwischen Risiko und Unsicherheit. Risiko wird von Knight als quantifizierbare 
+Fundamental in den Wirtschaftswissenschaften ist die von Frank H. Knight eingeführte Unterscheidung zwischen Risiko und Unsicherheit. Risiko wird von Knight als quantifizierbare 
 Unsicherheit definiert, also besipielsweise eine Situatuin in welcher jedem möglichen Ausgang eine Wahrscheinlichkeit zugeschrieben werden kann. Klassische Beispiele hierzu sind 
 Versicherungen oder Glücksspiel im Casino, wo ein Gewinn zwar unsicher ist, man aber weiß, dass die Kugel mit einer Wahrscheinlichkeit von $p = 1/37$ auf einem spezifischen Feld 
 landen wird.
@@ -207,7 +207,7 @@ wobei \(R_t\) die logarithmische Rendite, \(P_t\) den Preis am Tag \(t\) und \(P
 \subsection{Diskussion}
 Die Monte Carlo Simulation ermöglicht eine Analyse der zukünftigen Preisbewegungen der Aktie. Durch die Darstellung als Quantile Dotplot können wir die Unsicherheiten und Risiken, die mit den zukünftigen Preisbewegungen verbunden sind, besser verstehen. Dies hilf Investoren dabei, besser Entscheidung im Bezug auf die Investition in diese Aktie zu treffen.
 
-Vergleicht man in Abbildung \ref{fig:nebeneinander} die Verläufe der einzelnen Simulationen aufgezeichnet im Vergleich zu der Darstellung der Verteilung in einem Quantile Dotplot, ist klar zu erkennen, aus welcher Darstellung man eher die Tendenzen der zukünftigen Kursverläufe erkennen kann. Während der Monte Carlo Plot die Unsicherheiten in den einzelnen simulierten Kursverläufen darstellt, bietet der Quantile Dotplot eine kompaktere und klarere Darstellung der Verteilung der Endpreise. Man beachte, dass dies zum Beispiel als erste schnelle Analyse der Aktie genutz wird, wobei ein Investor etliche dieser am tag sehen würde.
+Vergleicht man in Abbildung \ref{fig:nebeneinander} die Verläufe der einzelnen Simulationen aufgezeichnet im Vergleich zu der Darstellung der Verteilung in einem Quantile Dotplot, ist klar zu erkennen, aus welcher Darstellung man eher die Tendenzen der zukünftigen Kursverläufe erkennen kann. Während der Monte Carlo Plot die Unsicherheiten in den einzelnen simulierten Kursverläufen darstellt, bietet der Quantile Dotplot eine kompaktere und klarere Darstellung der Verteilung der Endpreise. Man beachte, dass dies zum Beispiel als erste schnelle Analyse der Aktie genutz wird, wobei ein Investor etliche dieser am Tag sehen würde.
 Der Quantile Dotplot bringt einen intuitiveren Überblick und wie bereits ausgearbeitet definitive Vorteile für beide Denkprozesse nach Sektion 2.2.
 
 \section{Fazit und Ausblick}
